fixed spacing in my account section, and removed the before selector

--- a/client/src/pages/Settings/SettingsPage.scss
+++ b/client/src/pages/Settings/SettingsPage.scss
@@ -20,12 +20,7 @@
       padding: 0 .5rem;
       text-align: center;
       color: $mid-light-clr;
-
-      .pass-fff {
-        color: $light-clr;
-      }
     }
-    
   }
 
   // Main Settings Section 
@@ -41,13 +36,13 @@
     
       .edit-username-sect {
         gap: .5rem;
-        padding: 1rem;
         display: flex;
         flex-wrap: nowrap; 
         position: relative;
         flex-direction: row;
         justify-content: center;
-        margin: .5rem 0 1.25rem 0; 
+        margin: 0rem 0 1.5rem 0; 
+        padding: .5rem 0 .75rem 0;
         border-bottom: .5px solid rgba(52, 52, 52, 0.349);
 
         .display-username {
@@ -59,16 +54,6 @@
           cursor: not-allowed;
           background-color: $mid-dark-clr;
           border: 1px solid $low-dark-clr;
-
-          &:before {
-            left: 4.5%; 
-            top: -1.5rem;
-            padding: .8rem;
-            font-size: .9rem;
-            position: absolute;
-            color: $mid-light-clr;
-            content: "Edit Username";
-          }
         }
 
         .edit-username-btn {
